--- a/ambari/pom.xml
+++ b/ambari/pom.xml
@@ -78,6 +78,11 @@
             <scope>test</scope>
             <version>1.10.8</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.brooklyn</groupId>
+            <artifactId>brooklyn-utils-common</artifactId>
+            <version>0.9.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
