--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
     <groupId>io.brooklyn.ambari</groupId>
     <artifactId>brooklyn-ambari-parent</artifactId>
-    <version>0.5.0-SNAPSHOT</version>
+    <version>0.5.0-20160803.1156</version>
     <packaging>pom</packaging>
 
     <name>Brooklyn Ambari parent project</name>
